Fix card title overflow

--- a/scss/components/_jwCard.scss
+++ b/scss/components/_jwCard.scss
@@ -100,6 +100,8 @@
     }
 
     .jw-card-title {
+        display: inline-block;
+        width: 100%;
         padding: 0 10px;
 
         font-weight: bold;
@@ -285,6 +287,7 @@
 
     .jw-card-title {
         padding: 0 50px 20px;
+        line-height: normal;
     }
 
     .jw-card-description {
